--- a/WebApplicationAPP/WebApplicationAPP/Views/Shared/_Layout.cshtml
+++ b/WebApplicationAPP/WebApplicationAPP/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Persona" asp-action="Index">Persona</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Servicios" asp-action="Index">Servicios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
